--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       <div id="stage">
         <!-- Elements -->
         <h1>My Topic</h1>
+
+        <p>Stuff about my topic</p>
       </div>
 
       <input type="text" />
@@ -60,7 +62,7 @@
     </main>
 
     <!-- JS Libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
   </body>
